Fix spacing issue.

--- a/src/styl/thing.styl
+++ b/src/styl/thing.styl
@@ -132,8 +132,8 @@ p#footnote
   line-height: 14px
   font-family: 'AdelleSans-Regular', Helvetica, Arial, sans-serif
   color: #888
-  margin: 0 0 15px 10px
-  padding: 0
+  padding: 0 0 15px 10px
+  margin: 0
 
 /*
  * Media queries
